# CommisionBlue

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
bluebird/: __init__.py
bluebird/ble/: __init__.py  base.py  ble.py  callbacks.py  util.py
bluebird/client/: __init__.py  crypto.py
bluebird/server/: __init__.py  ble.py  ble_base.py  crypto.py
bluebird/util/: __init__.py  curves.py
examples/: client_example.py  client_example_no_ble.py  encryption_flow_example.py  poc.py  server_example.py  server_example_ble.py
src/: main.py
src/commision_blue/: __init__.py  crypto_utils.py
src/test/: ble_client.py  ble_server.py
