[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebird"
version = "0.0.1"
description = "A Python package for Bluetooth commissioning on Linux with cryptographic utilities baked in"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["cryptography"]

[project.urls]
"Homepage" = "https://github.com/nichonaugle/bluebird"
