[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebird"
version = "0.0.1"
description = "A Python package for Bluetooth commissioning on Linux with cryptographic utilities baked in"
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = ["cryptography (==43.0.1)", "certifi (==2024.8.30)", "cffi (==1.17.1)", "charset-normalizer (==3.4.0)", "dbus-python (==1.3.2)", "idna (==3.10)", "pycairo (==1.27.0)", "pycparser (==2.22)", "pygobject (==3.50.0)", "requests (==2.32.3)", "urllib3 (==2.2.3)"]

[project.urls]
"Homepage" = "https://github.com/nichonaugle/bluebird"
